# ProjectB

./: .claudeignore  .editorconfig  .gitignore  CLAUDE.md  NPC_선수_생성_기획서.md  encoding_repair_report.txt  encoding_suspect_files.txt  gen_rosters.py  names.txt  pro_usa_stage_flow.txt  temp_view.txt
02.SvelteElectron/: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTENT_PROMPT.md  DESIGN.md  DEV_GUIDE.md  PROJECT_STRUCTURE.md  PROMPT_ACHIEVEMENTS.md  PROMPT_CHARACTERS.md  PROMPT_EVENTS.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
03.App/: console.md  subscription.md
03.OnePitch/: README.md
03.OnePitch/02_기획/: 03_병역.md  (+8 more)
03.OnePitch/engine/: .gitignore  Cargo.toml
03.OnePitch/engine/src/: calendar.rs  frb_generated.rs  lib.rs
03.OnePitch/engine/src/api/: game.rs  mod.rs
03.OnePitch/engine/src/balance/: mod.rs
03.OnePitch/engine/src/data/: content.rs  match_session.rs  migration.rs  mod.rs  repository.rs  slot.rs
03.OnePitch/engine/src/integrity/: mod.rs
03.OnePitch/engine/src/sim/: career.rs  eval.rs  event.rs  growth.rs  injury.rs  manager.rs  market.rs  match_.rs  mod.rs  npc.rs  pitch.rs  protagonist.rs  retirement.rs  roster.rs  schedule.rs  staff.rs  training.rs
ExampleSaveFile/: README.md
docs/: ACADEMICS_PAGE_PLAN.md  ARCHITECTURE_SVELTE_ELECTRON.md  DATA_RUNTIME_ARCHITECTURE_PLAN.md  DEVELOPMENT_RULES.md  DEV_ENV_SETUP.md  ENCODING_POLICY.md  GIT_WORKFLOW.md  LEAGUE_DOWNSIZE_PLAN_KBO8_MLB16.md  MATCH_ENGINE_SIMULATOR_GUIDE.md  PERFORMANCE_BUDGET.md  RELEASE_CHECKLIST.md  RULE_SYNC_POLICY.md
(+18353 files in other folders)
