[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "seed_content"
path = "src/bin/seed_content.rs"

[dependencies]
flutter_rust_bridge = "=2.12.0"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
